Update URL schema - including name of the CA
The new schema includes the name of the CA as a part of URL

--- a/doc/configs/root-ca.cfg
+++ b/doc/configs/root-ca.cfg
@@ -32,8 +32,8 @@ default_bits            = $ENV::ca_default_bits
 default_md              = $ENV::ca_default_md
 default_days            = $ENV::ca_default_days                           # How long to certify for
 default_crl_days        = $ENV::rootca_crl_days                           # How long before next CRL
-aia_url                 = $base_url/$ca$cer_ext                           # CA certificate URL
-crl_url                 = $base_url/$ca$crl_ext                           # CRL distribution point
+aia_url                 = $base_url/$ca/$ca$cer_ext                       # CA certificate URL
+crl_url                 = $base_url/$ca/$ca$crl_ext                       # CRL distribution point
 ca_root_dir             = $dir/$ca_dir/$ca
 
 # CA certificate request
