--- a/doc/configs/signing-ca.cfg
+++ b/doc/configs/signing-ca.cfg
@@ -8,7 +8,7 @@ commonName              = "Sample Signing CA"
 
 [ default ]
 base_url                = http://pki.sample.org                           # CA base URL
-ocsp_url                = http://ocsp.sample.org                          # OCSP responder URL
+ocsp_url                = http://ocsp.sample.org                          # OCSP base responder URL
 
 ###
 # Don't edit below this line. Unless you know what you are doing
@@ -31,10 +31,10 @@ cer_ext                 = $ENV::PUBEXT
 crl_ext                 = $ENV::CRLEXT
 default_bits            = $ENV::ca_default_bits
 default_md              = $ENV::ca_default_md
-default_days            = $ENV::cert_default_days                           # How long to certify for
+default_days            = $ENV::cert_default_days                         # How long to certify for
 default_crl_days        = $ENV::rootca_crl_days                           # How long before next CRL
-aia_url                 = $base_url/$ca$cer_ext                           # CA certificate URL
-crl_url                 = $base_url/$ca$crl_ext                           # CRL distribution point
+aia_url                 = $base_url/$ca/$ca$cer_ext                       # CA certificate URL
+crl_url                 = $base_url/$ca/$ca$crl_ext                       # CRL distribution point
 ca_root_dir             = $dir/$ca_dir/$ca
 
 # CA certificate request
@@ -148,7 +148,7 @@ caIssuers;URI.0         = $aia_url
 
 [ ocsp_info ]
 caIssuers;URI.0         = $aia_url
-OCSP;URI.0              = $ocsp_url
+OCSP;URI.0              = $ocsp_url/$ca
 
 [ crl_info ]
 URI.0                   = $crl_url
